<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app"
    tools:context=".actividades.RegistroActivity">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/regImgBtnRetroceder"
            android:layout_width="61dp"
            android:layout_height="40dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/flecha_izquierda"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView13"
                android:layout_width="298dp"
                android:layout_height="25dp"
                android:text="@string/logLblBienvenidaRegistro"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="267dp"
                android:layout_height="50dp"
                android:text="@string/logLblTextoIntroductorio"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="40dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="233dp"
                android:layout_height="28dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:text="@string/logLblRegistroIngresarNombre" />

            <EditText
                android:id="@+id/regTxtNombre"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:background="@drawable/borde_login"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:hint="@string/logTxtRegistroNombre"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="221dp"
                android:layout_height="26dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginRight="25dp"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/logLblRegistroIngresarDNI" />
            <EditText
                android:id="@+id/regTxtDni"
                android:layout_width="273dp"
                android:layout_height="44dp"
                android:background="@drawable/borde_login"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:hint="@string/logTxtDni"/>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="221dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginRight="25dp"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/logLblIngresarCelular" />
            <EditText
                android:id="@+id/regTxtCelular"
                android:layout_width="273dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:background="@drawable/borde_login"
                android:hint="@string/logTxtCelular"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="258dp"
                android:layout_gravity="center"
                android:layout_height="28dp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/logLblIngresarCorreo" />

            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="273dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/borde_login"
                android:inputType="text"
                android:hint="@string/logTxtCorreo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="221dp"
                android:layout_height="26dp"
                android:layout_marginRight="22dp"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/logLblRegistroIngresarContraseña"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/regTxtClave"
                android:layout_width="273dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:inputType="text"
                android:background="@drawable/borde_login"
                android:layout_marginBottom="40dp"
                android:hint="@string/logTxtRegistroNuevaContraseña"/>

            <Button
                android:id="@+id/regBtnRegistrar"
                android:layout_width="177dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/borde_boton_login"
                android:text="@string/logBtnRegistrarNuevo"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>