<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".actividades.LoginActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="257dp"
                android:layout_height="193dp"
                android:layout_margin="40dp"
                app:srcCompat="@drawable/logo"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="36dp"
                android:text="@string/logLblMensajeBienvenida"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:layout_marginBottom="20dp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="203dp"
                android:layout_height="27dp"
                android:text="@string/logLblIngresarDni"
                android:textColor="@color/black"
                android:layout_marginRight="43dp"
                android:textSize="15dp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/logTxtDni"
                android:layout_width="289dp"
                android:layout_height="36dp"
                android:background="@drawable/borde_login"
                android:layout_marginBottom="15dp"
                android:hint="@string/logTxtDni"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logLblIngresarContraseña"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="67dp"/>

            <EditText
                android:id="@+id/logTxtClave"
                android:layout_width="289dp"
                android:layout_height="36dp"
                android:background="@drawable/borde_login"
                android:hint="@string/logTxtContraseña"
                android:layout_marginBottom="25dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteY="463dp" />

            <Button
                android:id="@+id/logBtnIngresar"
                android:layout_width="142dp"
                android:layout_height="39dp"
                android:background="@drawable/borde_boton_login"
                android:text="@string/logBtnIngresar"
                android:layout_marginBottom="20dp"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logLblEresNuevo"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/logBtnRegistro"
                android:layout_width="196dp"
                android:layout_height="48dp"
                android:background="@drawable/borde_boton_login"
                android:text="@string/logBtnRegistrar"
                android:textSize="17dp"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="624dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>